+ fix slider lengths and alignments as per release 1.1

--- a/assets/css/module.css
+++ b/assets/css/module.css
@@ -1,15 +1,15 @@
 @CHARSET "UTF-8";
 
 .field_key {
-	margin-left: 205px;
+	margin-left: 203px;
 }
 
 input.widgetSlider {
-	width: 345px;
+	width: 350px;
 }
 
-input.widgetSlider#Element_OphAuAnaestheticsatisfactionaudit_Satisfaction_nausea {
-	width: 116px;
+input.widgetSlider#Element_OphOuAnaestheticsatisfactionaudit_Satisfaction_nausea {
+	width: 120px;
 }
 
 #liveMEWSContainer {
